# mybuddy

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  WORK.md  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  tokens.css
.hallmark/: log.json  preflight.json
.pytest-tmp/test_agent_does_not_prefetch_s0/: no_search_messages.db
.pytest-tmp/test_agent_passes_recent_dialo0/: ctx.db
buddyshell/: App.xaml  App.xaml.cs  Bubble.xaml  Bubble.xaml.cs  BuddyShell.csproj  ChatPanel.xaml  ChatPanel.xaml.cs  EdgeDock.cs  EngineHost.cs  FirstRunWindow.xaml  FirstRunWindow.xaml.cs  FoodTray.xaml  FoodTray.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Notices.cs  Outbox.cs  Presence.cs  SettingsStore.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  SpikeEvidence.cs  StateLoop.cs  TouchLayer.cs  Tray.cs  WalkAttempt.cs
buddyshell.Tests/: AnimationAcceptanceCapture.cs  AnimationRealSoak.cs  BuddyShell.Tests.csproj  Program.cs
distribution/: THIRD_PARTY_NOTICES.txt  config.default.yaml  使用说明.html
doc/: 功能演示汇报.md
docs/: DEVLOG.md  QQBOT.md  REPORT.md  REQUIREMENTS.md  V2_PARKING.md  VPET.md  VPET_ACCEPTANCE.md  VPET_PHASE2_MANUAL_QA.md  VPET_PHASE2_SPEC.md  VPET_PHASE2_WINDOWS_CODEX_RUNBOOK.md  VPET_PRODUCT_V1.md  VPET_V1_ANIMATION_STATE_MACHINE.md  VPET_V1_ASSET_DISPOSITION.md  VPET_V1_EXPERIMENT.md  VPET_V1_KICKOFF.md  VPET_V1_PHYSIO_SPEC.md  VPET_V1_PROTOCOL_V2.md  VPET_V1_SHELL_SPEC.md  项目报告.md
eval/: README.md  RESULTS.md  locomo_eval.py  locomo_extract.py  locomo_granularity.py  memory_eval.py
eval/data/: memory_zh.json
frontend/: app.js  index.html  package-lock.json  package.json  styles.css  vite.config.ts
mybuddy/: __init__.py  _time.py  api.py  body_api.py  cli.py  cli_admin.py  config.py  mind.py  personality.json  reading.txt  web.py
scripts/: accept_real_key.py  build_share.ps1  engine_entry.py  freeze_vpet_v1.ps1  package_buddyshell.ps1  package_vpet_plugin.ps1  package_vpet_plugin.sh  personality_regression.py  personality_regression_cases.json  real_key_acceptance.ps1  seed_demo.py  start_mybuddy_web.ps1  vpet_acceptance_capture.py  vpet_acceptance_evidence.py  vpet_acceptance_finalize.py  vpet_acceptance_verify.py  vpet_experiment_export.py  vpet_weekly_check.py
tests/: test_agent.py  test_agent_context.py  test_agent_emotion.py  test_agent_search.py  test_agent_skills.py  test_api.py  test_auth_cookie.py  test_body_api.py  test_chat_service.py  test_claude_provider.py  test_cli.py  test_cli_admin.py  test_dream.py  test_emotion.py  test_feedback.py  test_living_state.py  test_longitudinal.py  test_memory.py  test_memory_daily_simulation.py  test_mind.py  test_openai_compatible_provider.py  test_personality_regression.py  test_physio.py  test_qq_channel.py  test_queue.py  test_repository_shape.py  test_safety_gates.py  test_scheduler.py  test_semantic.py  test_skills.py  test_tools.py  test_tools_extra.py  test_trajectory.py  test_users_storage.py  test_vpet.py  test_vpet_acceptance_capture.py  test_vpet_acceptance_finalize.py  test_vpet_acceptance_verify.py  test_vpet_evidence.py  test_vpet_transport_parity.py  (+2 more)
vpet-plugin/: ActionMapper.cs  BridgeClient.cs  BridgeModels.cs  DrainWorker.cs  EventAggregator.cs  IVPetHost.cs  MyBuddy.VPetPlugin.csproj  MyBuddyBridgePlugin.cs  MyBuddyPlugin.cs  MyBuddyTalkAPI.cs  PresenceGate.cs  SettingsView.xaml  SettingsView.xaml.cs  VPetHostAdapter.cs
(+374 files in other folders)
