[project]
name = "mybuddy"
version = "0.1.0"
description = "生活陪伴型 AI 小伙伴 - 借鉴 Hermes Agent 自学习机制 + 分层记忆"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "lhx" }]
license = { text = "MIT" }
dependencies = [
    # LLM clients
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    # Storage
    "sqlalchemy>=2.0.30",
    # Scheduling
    "apscheduler>=3.10.4",
    # CLI & config
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    # Date parsing(记忆治理里解析"明天下午3点"这类截止表述)
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
mybuddy = "mybuddy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mybuddy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
