[project]
name = "mybuddy"
version = "0.1.0"
description = "本地运行的最小人格引擎"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "lhx" }]
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
api = ["fastapi>=0.110.0", "uvicorn>=0.29.0"]
dev = ["httpx>=0.27.0", "pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0"]

[project.scripts]
mybuddy = "mybuddy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mybuddy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
